[build-system]
requires = ["setuptools", "toml; python_version < '3.11'"]

[tool]
[tool.poetry]
name = "sysrsync"
version = "1.1.1"
description = "Simple and safe python wrapper for calling system rsync"
authors = ["Gabriel Chamon <gchamon@live.com>"]
readme = "README.md"
homepage = "https://github.com/gchamon/sysrsync"

[tool.poetry.dependencies]
python = "^3.6"
toml = { version = "^0.10.0", python = "<3.11" }

[tool.poetry.dev-dependencies]
autopep8 = "*"
flake8 = "*"
mypy = "*"
nose = "*"
pylint = "*"
rope = "*"
typed-ast = "<1.5.0,>=1.4.0"
